--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -21,3 +21,21 @@
     border-radius: 20%;
     opacity: 0.5;
 }
+
+body {
+    margin: 0;
+    padding: 0;
+    font-size: 100%;
+}
+
+p {
+    padding: 0 1rem;
+    font-size: 1.5rem;
+}
+
+.bar {
+    position: fixed;
+    top: 0;
+    width: 0.5%;
+    height: 4px;
+}
